--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -1019,5 +1019,175 @@
         }
       }
     }
+
+    @include respond(tablet)
+    {
+      // border: 1px solid red;
+      height: 800px;
+      display: grid;
+      grid-template-rows: [] 20% [] 80%;
+      > p {
+        color: $color_dark;
+        width: 100%;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+      }
+
+      > div {
+        display: grid;
+        grid-template-rows: [] 50% [] 50%;
+        // border: 1px solid rgb(0, 38, 255);
+
+        > section {
+          // border: 1px solid rgb(0, 102, 255);
+          display: grid;
+          grid-template-columns: [] 20% [] 80%;
+          grid-template-rows: [] 50% [] 50%;
+          > :nth-child(1) {
+            display: grid;
+            align-items: flex-start;
+            justify-content: center;
+            color: $color_green;
+            font-size: x-large;
+          }
+          > :nth-child(2) {
+            display: grid;
+            align-items: flex-start;
+            grid-template-rows: [] 20% [] 80%;
+            color: $color_dark;
+            font-size: 12px;
+            // border: 1px solid red;
+            p {
+              margin: 0;
+            }
+            :nth-child(1) {
+              font-size: 15px;
+              font-weight: 600;
+            }
+            :nth-child(2) {
+              color: $color_dark;
+            }
+          }
+
+          :nth-child(3) {
+            display: grid;
+            align-items: flex-start;
+            justify-content: center;
+            color: $color_green;
+            font-size: x-large;
+          }
+          :nth-child(4) {
+            display: grid;
+            align-items: flex-start;
+            grid-template-rows: [] 20% [] 80%;
+            // color: red;
+            font-size: 12px;
+            p {
+              margin: 0;
+            }
+            :nth-child(1) {
+              font-size: 15px;
+              font-weight: 600;
+            }
+            :nth-child(2) {
+              color: $color_dark;
+            }
+          }
+        }
+      }
+      
+    }
+
+
+    @include respond(Ipads)
+    {
+      // border: 1px solid red;
+      height: 500px;
+      display: grid;
+      grid-template-rows: [] 30% [] 70%;
+      > p {
+        color: $color_dark;
+        width: 100%;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+      }
+
+      > div {
+        display: grid;
+        grid-template-columns: [] 50% [] 50%;
+        // border: 1px solid rgb(0, 38, 255);
+
+        > section {
+          // border: 1px solid rgb(0, 102, 255);
+          display: grid;
+      //     grid-template-columns: [] 20% [] 80%;
+          grid-template-columns: [] 30% [] 70%;
+          // align-items: center;
+          > :nth-child(1) {
+            display: grid;
+            align-items: flex-start;
+            justify-content: center;
+            color: $color_green;
+            font-size: x-large;
+            text-transform: capitalize;
+          }
+          > :nth-child(2) {
+            display: grid;
+            align-items: flex-start;
+            grid-template-rows: [] 20% [] 80%;
+            color: $color_dark;
+            font-size: 12px;
+            // border: 1px solid red;
+            text-transform: capitalize;
+
+            p {
+              margin: 0;
+              line-height: 25px;
+            }
+            :nth-child(1) {
+              font-size: 15px;
+              font-weight: 800;
+              
+            }
+            :nth-child(2) {
+              color: $color_dark;
+            }
+          }
+
+          :nth-child(3) {
+            display: grid;
+            align-items: flex-start;
+            justify-content: center;
+            color: $color_green;
+            font-size: x-large;
+          }
+          :nth-child(4) {
+            display: grid;
+            align-items: flex-start;
+            grid-template-rows: [] 20% [] 80%;
+            // color: red;
+            font-size: 12px;
+            text-transform: capitalize;
+
+            p {
+              margin: 0;
+              line-height: 25px;
+
+            }
+            :nth-child(1) {
+              font-size: 15px;
+              font-weight: 800;
+            }
+            :nth-child(2) {
+              color: $color_dark;
+            }
+          }
+        }
+      }
+    }
   }
 }
