--- a/css/scss.css
+++ b/css/scss.css
@@ -1541,3 +1541,81 @@
     color: #2c4755;
   }
 }
+.cont .proj_photo {
+  height: 1500px;
+  background: #fafafa;
+}
+@media only screen and (max-width: 480px) {
+  .cont .proj_photo {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 15% 85%;
+    grid-template-rows: 15% 85%;
+  }
+  .cont .proj_photo > :nth-child(1) > p {
+    position: relative;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .cont .proj_photo > :nth-child(2) {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 30% 30% 30%;
+    grid-template-rows: 30% 30% 30%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cont .proj_photo > :nth-child(2) section {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    height: 100%;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) {
+    height: 90%;
+    width: 90%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 75% 25%;
+    grid-template-rows: 75% 25%;
+    background: #ffffff;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) > .proj_im1 {
+    background-image: url("/img/im1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) > .proj_im2 {
+    background-image: url("/img/im2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) > .proj_im3 {
+    background-image: url("/img/im3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) :nth-child(2) {
+    padding: 5px;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) :nth-child(2) > p {
+    margin: 0;
+    font-size: 15px;
+  }
+  .cont .proj_photo > :nth-child(2) section > :nth-child(1) :nth-child(2) :nth-child(2) {
+    font-size: 10px;
+    overflow: hidden;
+  }
+}
