--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -1184,9 +1184,7 @@
       }
     }
 
-    @include respond(Laptops)
-    {
-
+    @include respond(Laptops) {
       // border: 1px solid red;
       height: 500px;
       display: grid;
@@ -1270,12 +1268,9 @@
           }
         }
       }
-
     }
 
-    @include respond(Large_screens)
-    {
-
+    @include respond(Large_screens) {
       // border: 1px solid red;
       height: 500px;
       display: grid;
@@ -1359,13 +1354,9 @@
           }
         }
       }
-
     }
 
-
-    @include respond(Laptops)
-    {
-
+    @include respond(Laptops) {
       // border: 1px solid red;
       height: 500px;
       display: grid;
@@ -1449,7 +1440,84 @@
           }
         }
       }
+    }
+  }
 
+  .proj_photo {
+    // border: 1px solid red;
+    height: 1500px;
+    background: #fafafa;
+    @include respond(mobile) {
+      display: grid;
+      grid-template-rows: [] 15% [] 85%;
+
+      > :nth-child(1) {
+        // position: relative;
+        // border: 1px solid red;
+        > p {
+          position: relative;
+          width: fit-content;
+          margin: 0;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      > :nth-child(2) {
+        //div
+        display: grid;
+        grid-template-rows: [] 30% [] 30% [] 30%;
+        align-items: center;
+        // row-gap: 5%;
+        section {
+          //section
+          display: grid;
+          align-items: center;
+          justify-items: center;
+          // border: 1px solid blue;
+          height: 100%;
+          > :nth-child(1) {
+            height: 90%;
+            width: 90%;
+            // border: 1px solid green;
+            display: grid;
+            grid-template-rows: [] 75% [] 25%;
+            background: #ffffff;
+            border-radius: 5px;
+            overflow: hidden;
+            // grid-column: 2/6;
+
+            > .proj_im1 {
+              background-image: url("/img/im1.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im2 {
+              background-image: url("/img/im2.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im3 {
+              background-image: url("/img/im3.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+
+            :nth-child(2) {
+              padding: 5px;
+              > p {
+                margin: 0;
+                font-size: 15px;
+              }
+
+              :nth-child(2) {
+                font-size: 10px;
+                overflow: hidden;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
