--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -1445,9 +1445,10 @@
 
   .proj_photo {
     // border: 1px solid red;
-    height: 1500px;
+    // height: 1500px;
     background: #fafafa;
     @include respond(mobile) {
+      height: 1500px;
       display: grid;
       grid-template-rows: [] 15% [] 85%;
 
@@ -1510,8 +1511,333 @@
                 font-size: 15px;
               }
 
+              :nth-child(1) {
+                font-size: 13px;
+                font-weight: 600;
+              }
+
               :nth-child(2) {
-                font-size: 10px;
+                font-size: 11px;
+                // overflow: hidden;
+                line-height: 13px;
+                // border: 1px solid red ;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    @include respond(tablet) {
+      height: 1500px;
+      display: grid;
+      grid-template-rows: [] 15% [] 85%;
+
+      > :nth-child(1) {
+        // position: relative;
+        // border: 1px solid red;
+        > p {
+          position: relative;
+          width: fit-content;
+          margin: 0;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      > :nth-child(2) {
+        //div
+        display: grid;
+        grid-template-rows: [] 30% [] 30% [] 30%;
+        align-items: center;
+        // row-gap: 5%;
+        section {
+          //section
+          display: grid;
+          align-items: center;
+          justify-items: center;
+          // border: 1px solid blue;
+          height: 100%;
+          > :nth-child(1) {
+            height: 90%;
+            width: 90%;
+            // border: 1px solid green;
+            display: grid;
+            grid-template-rows: [] 75% [] 25%;
+            background: #ffffff;
+            border-radius: 5px;
+            overflow: hidden;
+            // grid-column: 2/6;
+
+            > .proj_im1 {
+              background-image: url("/img/im1.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im2 {
+              background-image: url("/img/im2.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im3 {
+              background-image: url("/img/im3.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+
+            :nth-child(2) {
+              padding: 5px;
+              > p {
+                margin: 0;
+                font-size: 15px;
+              }
+
+              :nth-child(1) {
+                font-size: 14px;
+                font-weight: 800;
+              }
+
+              :nth-child(2) {
+                font-size: 12px;
+                overflow: hidden;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    @include respond(Ipads) {
+      height: 1500px;
+      display: grid;
+      grid-template-rows: [] 15% [] 85%;
+
+      > :nth-child(1) {
+        > p {
+          position: relative;
+          width: fit-content;
+          margin: 0;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      > :nth-child(2) {
+        //div
+        display: grid;
+        grid-template-rows: [] 30% [] 30% [] 30%;
+        align-items: center;
+        // row-gap: 5%;
+        section {
+          //section
+          display: grid;
+          align-items: center;
+          justify-items: center;
+          // border: 1px solid blue;
+          height: 100%;
+          > :nth-child(1) {
+            height: 90%;
+            width: 70%;
+            // border: 1px solid green;
+            display: grid;
+            grid-template-rows: [] 75% [] 25%;
+            background: #ffffff;
+            border-radius: 5px;
+            overflow: hidden;
+            // grid-column: 2/6;
+
+            > .proj_im1 {
+              background-image: url("/img/im1.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im2 {
+              background-image: url("/img/im2.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im3 {
+              background-image: url("/img/im3.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+
+            :nth-child(2) {
+              padding: 5px;
+              > p {
+                margin: 0;
+                font-size: 15px;
+              }
+
+              :nth-child(1) {
+                font-size: 14px;
+                font-weight: 800;
+              }
+
+              :nth-child(2) {
+                font-size: 12px;
+                overflow: hidden;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    @include respond(Laptops) {
+      height: 600px;
+
+      display: grid;
+      grid-template-rows: [] 20% [] 80%;
+
+      > :nth-child(1) {
+        > p {
+          position: relative;
+          width: fit-content;
+          margin: 0;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      > :nth-child(2) {
+        //div
+        display: grid;
+        grid-template-columns: [] calc(100% / 3) []  calc(100% / 3) []  calc(100% / 3);
+        align-items: center;
+        justify-content: center;
+        // column-gap: 5%;
+        section {
+          //section
+          display: grid;
+          align-items: center;
+          justify-items: center;
+          // border: 1px solid blue;
+          height: 100%;
+          > :nth-child(1) {
+            height: 60%;
+            width: 95%;
+            // border: 1px solid green;
+            display: grid;
+            grid-template-rows: [] 75% [] 25%;
+            background: #ffffff;
+            border-radius: 5px;
+            overflow: hidden;
+            // grid-column: 2/6;
+
+            > .proj_im1 {
+              background-image: url("/img/im1.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im2 {
+              background-image: url("/img/im2.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im3 {
+              background-image: url("/img/im3.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+
+            :nth-child(2) {
+              padding: 5px;
+              // border: 1px solid red;
+              > p {
+                margin: 0;
+                font-size: 15px;
+              }
+
+              :nth-child(1) {
+                font-size: 14px;
+                font-weight: 800;
+              }
+
+              :nth-child(2) {
+                font-size: 11px;
+                line-height: 13px;
+                height: fit-content;
+                // overflow: hidden;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    @include respond(Large_screens) {
+      height: 600px;
+      display: grid;
+      grid-template-rows: [] 15% [] 85%;
+
+      > :nth-child(1) {
+        > p {
+          position: relative;
+          width: fit-content;
+          margin: 0;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      > :nth-child(2) {
+        //div
+        display: grid;
+        grid-template-columns: [] 30% [] 30% [] 30%;
+        align-items: center;
+        justify-content: center;
+        // column-gap: 5%;
+        section {
+          //section
+          display: grid;
+          align-items: center;
+          justify-items: center;
+          // border: 1px solid blue;
+          height: 100%;
+          > :nth-child(1) {
+            height: 50%;
+            width: 90%;
+            // border: 1px solid green;
+            display: grid;
+            grid-template-rows: [] 75% [] 25%;
+            background: #ffffff;
+            border-radius: 5px;
+            overflow: hidden;
+            // grid-column: 2/6;
+
+            > .proj_im1 {
+              background-image: url("/img/im1.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im2 {
+              background-image: url("/img/im2.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+            > .proj_im3 {
+              background-image: url("/img/im3.jpg");
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+
+            :nth-child(2) {
+              padding: 5px;
+              // border: 1px solid red;
+              
+              > p {
+                margin: 0;
+                font-size: 15px;
+              }
+
+              :nth-child(1) {
+                font-size: 14px;
+                font-weight: 800;
+              }
+
+              :nth-child(2) {
+                font-size: 11px;
                 overflow: hidden;
               }
             }
